hide empty fields in list fragment and details fragment

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -349,6 +349,7 @@
                 android:id="@+id/fragment_detail_available_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_available_iv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/fragment_detail_barrier"
@@ -383,6 +384,7 @@
                 android:id="@+id/fragment_detail_agent_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_agent_iv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/fragment_detail_barrier"
