--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -269,7 +269,8 @@
             fragment_detail_bathrooms_title_tv,
             fragment_detail_bedrooms_title_tv,
             fragment_detail_location_title_tv,
-            fragment_detail_available_title_tv,
+            fragment_detail_post_date_title_tv,
+            fragment_detail_sold_date_title_tv,
             fragment_detail_agent_title_tv"/>
 
             <androidx.cardview.widget.CardView
@@ -298,7 +299,7 @@
                 android:layout_height="25dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="18dp"
-                android:contentDescription="@string/available_since"
+                android:contentDescription="@string/post_date"
                 android:src="@drawable/ic_near"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_detail_map_cv" />
@@ -324,39 +325,60 @@
                 app:layout_constraintTop_toBottomOf="@id/fragment_detail_point_of_interest_iv" />
 
             <ImageView
-                android:id="@+id/fragment_detail_available_iv"
+                android:id="@+id/fragment_detail_date_iv"
                 style="@style/detailIcon"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="18dp"
-                android:contentDescription="@string/available_since"
+                android:contentDescription="@string/post_date"
                 android:src="@drawable/ic_calendar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_detail_point_of_interest_cg" />
 
             <TextView
-                android:id="@+id/fragment_detail_available_title_tv"
+                android:id="@+id/fragment_detail_post_date_title_tv"
                 style="@style/detailSubtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:text="@string/available_since"
-                app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_available_iv"
-                app:layout_constraintStart_toEndOf="@+id/fragment_detail_available_iv"
-                app:layout_constraintTop_toTopOf="@+id/fragment_detail_available_iv" />
+                android:text="@string/post_date"
+                app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_date_iv"
+                app:layout_constraintStart_toEndOf="@+id/fragment_detail_date_iv"
+                app:layout_constraintTop_toTopOf="@+id/fragment_detail_date_iv" />
 
             <TextView
-                android:id="@+id/fragment_detail_available_tv"
+                android:id="@+id/fragment_detail_post_date_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_available_iv"
+                app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_date_iv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/fragment_detail_barrier"
-                app:layout_constraintTop_toTopOf="@+id/fragment_detail_available_iv"
+                app:layout_constraintTop_toTopOf="@+id/fragment_detail_date_iv"
                 tools:text="@sample/properties.json/details/availability_date/value" />
 
+            <TextView
+                android:id="@+id/fragment_detail_sold_date_title_tv"
+                style="@style/detailSubtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="@string/sold_date"
+                app:layout_constraintStart_toStartOf="@+id/fragment_detail_post_date_title_tv"
+                app:layout_constraintTop_toBottomOf="@id/fragment_detail_post_date_title_tv" />
+
+            <TextView
+                android:id="@+id/fragment_detail_sold_date_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_sold_date_title_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/fragment_detail_barrier"
+                app:layout_constraintTop_toTopOf="@+id/fragment_detail_sold_date_title_tv"
+                tools:text="@sample/properties.json/details/availability_date/value" />
 
             <ImageView
                 android:id="@+id/fragment_detail_agent_iv"
@@ -368,7 +390,7 @@
                 android:contentDescription="@string/real_estate_agent"
                 android:src="@drawable/ic_person"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_available_iv" />
+                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_sold_date_title_tv" />
 
             <TextView
                 android:id="@+id/fragment_detail_agent_title_tv"
