--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -26,7 +26,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|end"
-    android:layout_margin="15dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginBottom="80dp"
+    app:tint="@color/colorAccent"
     app:backgroundTint="@color/white"
     android:contentDescription="@string/locate_me"
     android:src="@drawable/ic_locate"
