--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -19,6 +19,18 @@
             android:layout_height="80dp"
             tools:srcCompat="@sample/properties"
             android:contentDescription="@string/property_picture" />
+
+        <TextView
+            android:id="@+id/fragment_list_item_sold_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorAccent"
+            android:fontFamily="@font/roboto_bold"
+            android:gravity="center"
+            android:text="@string/sold"
+            android:textColor="@color/white" />
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
