add clear button for sold date field

--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -483,8 +483,8 @@
                 android:autofillHints="@string/real_estate_agent"
                 android:hint="@string/sold_date"
                 android:visibility="gone"
-                app:endIconContentDescription="Date picker"
-                app:endIconDrawable="@drawable/ic_calendar"
+                app:endIconContentDescription="@string/clear_date_picker"
+                app:endIconDrawable="@drawable/ic_clear"
                 app:endIconMode="custom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_sold_date_iv"
